--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "jeroennoten/laravel-adminlte": "^1.23",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "paypal/rest-api-sdk-php": "^1.14"
+        "paypal/rest-api-sdk-php": "^1.14",
+        "miroc/laravel-adminer": "^4.5"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
