--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "google/recaptcha": "^1.2",
+        "intervention/image": "^2.7",
         "jeroennoten/laravel-adminlte": "^1.23",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "paypal/rest-api-sdk-php": "^1.14",
-        "miroc/laravel-adminer": "^4.5"
+        "miroc/laravel-adminer": "^4.5",
+        "paypal/rest-api-sdk-php": "^1.14"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
