--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true,
-        "allow-plugins": false
+        "allow-plugins": {
+            "kylekatarnls/update": true
+        }
     }
 }
