--- a/composer.json
+++ b/composer.json
@@ -58,8 +58,6 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true,
-        "allow-plugins": {
-            "kylekatarnls/update": true
-        }
+        "allow-plugins": false
     }
 }
