--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "@babel/preset-react": "^7.18.6",
         "axios": "^1.2.1",
         "bootstrap": "^5.2.3",
-        "jquery": "^3.6.3",
         "cross-env": "^5.1",
+        "jquery": "^3.6.3",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.4",
         "resolve-url-loader": "^5.0.0",
@@ -26,6 +26,7 @@
         "admin-lte": "^3.2.0",
         "cookieconsent": "^3.1.1",
         "font-awesome": "^4.7.0",
+        "fslightbox": "^3.4.1",
         "http": "*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
