--- a/.env.live
+++ b/.env.live
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=я-WASD
 APP_ENV=local
 APP_KEY=base64:VZLYfvc28eWuMcrV7u2jJSEEelBvPeji4Sy5nM3xzx4=
 APP_DEBUG=true
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=r-wasd-db
+DB_HOST=a054um.forpsi.com
 DB_PORT=3306
-DB_DATABASE=r_wasd_db
-DB_USERNAME=r-wasd-user
-DB_PASSWORD=r-wasd-pwd
+DB_DATABASE=b23463
+DB_USERNAME=b23463
+DB_PASSWORD=RMknfEm8
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -51,18 +51,19 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-PAYPAL_MODE=live
+PAYPAL_MODE=sandbox
 PAYPAL_LIVE_CLIENT_ID=
 PAYPAL_LIVE_CLIENT_SECRET=
 PAYPAL_LIVE_APP_ID=
 
 PAYPAL_SANDBOX_API_USERNAME=sales@r-wasd.com
 PAYPAL_SANDBOX_API_PASSWORD=Bttf_1985
+
 PAYPAL_SANDBOX_CLIENT_ID=AY7bg2O-01VJHijJ6bSOQqG7J112S6JpiE0m67Y5L6Mbs6VlURAdXZTum2-WVLz7SVIzuW1sE2QuqVnX
 PAYPAL_SANDBOX_CLIENT_SECRET=EHngqpE7RQiz4Jz2dMbFMMSsn-Eck5e-aNOd-yQRY_hQick8p0-x2QoS7UbQMae7YSyVel5kPgYAbsMZ
 
 PAYPAL_PAYMENT_ACTION=Sale
-PAYPAL_CURRENCY=USD
+PAYPAL_CURRENCY=EUR
 PAYPAL_NOTIFY_URL=
 PAYPAL_LOCALE=en_US
 PAYPAL_VALIDATE_SSL=true
