--- a/.env.live
+++ b/.env.live
@@ -1,8 +1,8 @@
 APP_NAME=я-WASD
 APP_ENV=local
 APP_KEY=base64:VZLYfvc28eWuMcrV7u2jJSEEelBvPeji4Sy5nM3xzx4=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=https://r-wasd.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
