--- a/.env.live
+++ b/.env.live
@@ -63,7 +63,7 @@ PAYPAL_SANDBOX_CLIENT_ID=AY7bg2O-01VJHijJ6bSOQqG7J112S6JpiE0m67Y5L6Mbs6VlURAdXZT
 PAYPAL_SANDBOX_CLIENT_SECRET=EHngqpE7RQiz4Jz2dMbFMMSsn-Eck5e-aNOd-yQRY_hQick8p0-x2QoS7UbQMae7YSyVel5kPgYAbsMZ
 
 PAYPAL_PAYMENT_ACTION=Sale
-PAYPAL_CURRENCY=EUR
+PAYPAL_CURRENCY=USD
 PAYPAL_NOTIFY_URL=
 PAYPAL_LOCALE=en_US
 PAYPAL_VALIDATE_SSL=true
