--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "miroc/laravel-adminer": "^4.5",
-        "paypal/rest-api-sdk-php": "^1.14"
+        "paypal/rest-api-sdk-php": "^1.14",
+        "barryvdh/laravel-dompdf": "^0.8.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
