--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-dompdf": "^0.8.2",
         "fideloper/proxy": "~3.3",
         "google/recaptcha": "^1.2",
+        "illuminate/mail": "*",
         "intervention/image": "^2.7",
         "jeroennoten/laravel-adminlte": "^1.23",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "miroc/laravel-adminer": "^4.5",
-        "paypal/rest-api-sdk-php": "^1.14",
-        "barryvdh/laravel-dompdf": "^0.8.2"
+        "paypal/rest-api-sdk-php": "^1.14"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
