--- a/.env.dev
+++ b/.env.dev
@@ -51,9 +51,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-PAYPAL_MODE=sandbox
-PAYPAL_LIVE_CLIENT_ID=
-PAYPAL_LIVE_CLIENT_SECRET=
+PAYPAL_MODE=live
+PAYPAL_LIVE_CLIENT_ID=AbtnNlHxh11LSArDbvox94kl1kwXPUDbMklFirHY_kfv3XnbGoB1_zdxKqXVvjFO4qzQEXWdSv2Qf9j9
+PAYPAL_LIVE_CLIENT_SECRET=ELZo2rc7YaakIlhhc-S4btzXULsNbPBTT3oYEh5r0IAyBEQ9OJGnjjIsUQa-qnkAS2TpSEmger1o507Q
 PAYPAL_LIVE_APP_ID=
 
 PAYPAL_SANDBOX_API_USERNAME=sales@r-wasd.com
