--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
         - max_execution_time=600
         - upload_max_filesize=128M
-        - upload_max_filesize=1024M
+        - post_max_size=1024M
     ports:
       - "30000:80"
     depends_on:
