--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - ./:/var/www/html
       - ./docker/php-apache/default.conf:/etc/apache2/sites-enabled/000-default.conf
+      - ./docker/php-apache/php.ini:/usr/local/etc/php/php.ini
     environment:
         - max_execution_time=600
         - upload_max_filesize=128M
